# student-attendance-system

./: .gitignore  add_websocket_final.py  fix_websocket.py  fix_websocket_v2.py  function_to_insert.py  token.txt  websocket_broadcast.txt  websocket_helper.py
.claude/: settings.local.json
.claude/epics/archived/: archive-log.md
.claude/epics/checkin-fix/: 11-analysis.md  11.md  12-analysis.md  12.md  13-analysis.md  13.md  14-analysis.md  14.md  15-analysis.md  15.md  16.md  17.md  18.md  epic.md  execution-status.md  github-mapping.md
.claude/epics/student-attendance-system/: 001.md  002.md  003.md  004.md  005.md  006.md  007.md  008.md  2.md  3.md  4-analysis.md  4.md  6.md  9.md  epic.md.bak  execution-status.md  github-mapping.md
.claude/prds/: checkin-fix.md  student-attendance-system.md
backend/: .env  .env.example  LICENSE  Makefile  README.md  add_test_data.py  add_test_students.py  attendance.db  check_roles.py  debug_class_members.py  debug_import.py  debug_sqlalchemy.py  list_teachers.py  main.py  pyproject.toml  requirements.txt  run_comprehensive_tests.py  setup-dev.bat  setup-dev.sh  simple_test.py  test_api_direct.py  test_api_response.py  test_class_persistence.py  test_direct_query.py  test_ferpa_basic.py  test_main.py  test_members_only.py  test_server.py  test_sync_engine.py  test_sync_engine_simple.py  test_verification.py  test_verification_final.py  test_websocket_route.py  verify_test_data.py
backend/alembic/: env.py
backend/alembic/versions/: 9c5a22028615_add_database_indexes_and_optimistic_.py
backend/app/api/v1/: admin.py  analytics.py  attendance.py  attendance_backup.py  auth.py  classes.py  sis.py  sync.py
backend/app/compliance/: __init__.py  access_logger.py  anonymizer.py  audit_service.py  consent_manager.py  dashboard.py  data_controller.py  retention_engine.py  training_materials.py
backend/app/core/: auth.py  circuit_breaker.py  config.py  database.py  security.py  sis_config.py  websocket.py
backend/app/gateway/: __init__.py  api_key_manager.py  coordinator.py  monitoring.py  request_queue.py  router.py  throttler.py
backend/app/integrations/: __init__.py
backend/app/integrations/email/: __init__.py  email_service.py  sendgrid_provider.py  smtp_provider.py  template_manager.py
backend/app/integrations/sis/: __init__.py  enrollment_handler.py  error_handler.py  oauth_service.py  roster_sync.py  token_manager.py
backend/app/integrations/sis/providers/: __init__.py  infinite_campus.py  powerschool.py  skyward.py
backend/app/integrations/sms/: __init__.py  aws_sns_provider.py  sms_service.py  twilio_provider.py
backend/app/middleware/: compliance.py  gateway_middleware.py  rate_limiting.py  security.py
backend/app/models/: __init__.py  attendance.py  attendance_pattern.py  audit_log.py  class_session.py  ferpa.py  notification_preferences.py  notifications.py  sis_integration.py  sync_metadata.py  user.py
backend/app/schemas/: attendance.py  auth.py  class_session.py  sis.py  sync.py
backend/app/security/: __init__.py  access_control.py  anomaly_detector.py  audit_logger.py  incident_response.py  monitoring.py
backend/app/services/: api_gateway.py  attendance_analytics.py  attendance_engine.py  audit_service.py  pattern_detection.py  privacy_service.py  qr_generator.py  sis_service.py
backend/app/services/notifications/: __init__.py  audit_service.py  batching_service.py  bulk_notification_service.py  delivery_tracking_service.py  enhanced_notification_manager.py  fcm_service.py  notification_manager.py  webpush_service.py
backend/app/services/sync/: __init__.py  bidirectional_sync.py  data_validator.py  gradebook_integration.py  schedule_manager.py  sync_manager.py
backend/app/tasks/: __init__.py  sync_tasks.py
backend/app/utils/: __init__.py  conflict_resolution.py
backend/app/websocket/: attendance_updates.py  event_handlers.py  live_updates.py  load_test.py
backend/tests/: test_api_gateway.py
backend/tests/compliance/: test_anonymizer.py  test_compliance_middleware.py  test_dashboard.py  test_ferpa_integration.py  test_privacy_service.py  test_retention_engine.py
backend/tests/integrations/email/: test_email_service.py
backend/tests/integrations/sis/: __init__.py  test_oauth_service.py  test_sis_config.py  test_sis_service.py
backend/tests/integrations/sms/: test_sms_service.py
backend/tests/performance/: test_load_testing.py
backend/tests/security/: test_security_validation.py  test_websocket_security.py
backend/tests/services/notifications/: test_bulk_notification_service.py  test_enhanced_notification_manager.py
frontend/: .env  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: sw-notifications.js
frontend/src/: App.css  App.tsx
frontend/src/components/: AdminDashboard.css  AdminDashboard.tsx  AttendanceDashboard.css  AttendanceDashboard.tsx  AttendanceOverride.tsx  AttendancePatterns.tsx  AttendanceStatus.tsx  ClassCreationForm.css  ClassCreationForm.tsx  ConnectionStatusIndicator.tsx  LiveStudentActivity.tsx  LoginForm.css  LoginForm.tsx  MobileApp.css  MobileApp.tsx  MobileClassCreation.css  MobileClassCreation.tsx  Navigation.css  Navigation.tsx  PWAInstallPrompt.css  (+20 more)
public/: manifest.json  sw.js
(+78 files in other folders)
